disabling edit of FK_MillKey

--- a/EFGetStarted.AspNetCore.ExistingDb/Views/ProductionData/Edit.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/ProductionData/Edit.cshtml
@@ -13,11 +13,11 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="PkProductionId" />
         <div class="form-group">
-            @*<label asp-for="FkMillKey" class="control-label col-md-2"></label>
+            <label asp-for="FkMillKey" class="control-label col-md-2"></label>
             <div class="col-md-10">
                 <select asp-for="FkMillKey" class="form-control" asp-items="ViewBag.FkMillKey"></select>
                 <span asp-validation-for="FkMillKey" class="text-danger"></span>
-            </div>*@
+            </div>
         </div>
         <div class="form-group">
             <label asp-for="FkProdCatId" class="control-label col-md-2"></label>
