--- a/EFGetStarted.AspNetCore.ExistingDb/Views/ProductionData/Edit.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/ProductionData/Edit.cshtml
@@ -15,7 +15,7 @@
         <div class="form-group">
             <label asp-for="FkMillKey" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                <select asp-for="FkMillKey" class="form-control" asp-items="ViewBag.FkMillKey"></select>
+                <input disabled asp-for="FkMillKey" class="form-control" asp-items="ViewBag.FkMillKey">
                 <span asp-validation-for="FkMillKey" class="text-danger"></span>
             </div>
         </div>
