--- a/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Components/ProdDetail/Default.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Components/ProdDetail/Default.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable <MillData.Models.ProductionData>
-
+@using MillData.Models
 @{
     //if no data available, show error
     if (Model.Any())
-    { <h3>Production Data: Mill @Model.First().FkMillKey</h3> }
+    { <h3>Production Data: Mill @Model.First().FkMillKeyNavigation.MillId</h3> }
     else
     { <div id="notif">No production data available.</div> }
 }
@@ -36,6 +36,7 @@
     }
 </style>
 @{
+
     //if no data available, show error
     if (Model.Any())
     {
